src/ru/ifmo/ctddev/drozdov/python/parsing/PythonParser.java
// $ANTLR 3.4 C:\\ANTLR\\Python\\Python.g 2014-04-16 21:49:51

package ru.ifmo.ctddev.drozdov.python.parsing;

import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class PythonParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOL", "COMMENT", "COMP", "DEDENT", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "ID", "INDENT", "INT", "LOGIC", "MULT", "NEWLINE", "NL", "NOT", "OCTAL_ESC", "SPACE", "STRING", "SUM", "UNICODE_ESC", "WS", "'('", "')'", "','", "':'", "'='", "'None'", "'['", "']'", "'break'", "'continue'", "'def'", "'elif'", "'else'", "'for'", "'if'", "'in'", "'pass'", "'print'", "'range'", "'return'", "'while'"
    };

    public static final int EOF=-1;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int BOOL=4;
    public static final int COMMENT=5;
    public static final int COMP=6;
    public static final int DEDENT=7;
    public static final int ESC_SEQ=8;
    public static final int EXPONENT=9;
    public static final int FLOAT=10;
    public static final int HEX_DIGIT=11;
    public static final int ID=12;
    public static final int INDENT=13;
    public static final int INT=14;
    public static final int LOGIC=15;
    public static final int MULT=16;
    public static final int NEWLINE=17;
    public static final int NL=18;
    public static final int NOT=19;
    public static final int OCTAL_ESC=20;
    public static final int SPACE=21;
    public static final int STRING=22;
    public static final int SUM=23;
    public static final int UNICODE_ESC=24;
    public static final int WS=25;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public PythonParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public PythonParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return PythonParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\ANTLR\\Python\\Python.g"; }



    /**
     * Common interface for python interpreter/compiler
     */
    public interface ParsingManager {

    	/**
    	 * Gets a new variable for current operation
    	 * 
    	 * @param option
    	 *            string representing the current operation (example: "+",
    	 *            "not", etc)
    	 * @param id1
    	 *            first variable id
    	 * @param id2
    	 *            second variable id
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 * @returns a new id for a new variable
    	 */
    	public int getVariable(String option, int id1, int id2)
    			throws RecognitionException;

    	/**
    	 * Gets a new variable for a new local temporary variable
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 * @returns a new id for a new variable
    	 */
    	public int getVariable(Object value) throws RecognitionException;

    	/**
    	 * Gets a variable by its name
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 * @returns variable id
    	 */
    	public int getVariableByName(String name) throws RecognitionException;

    	/**
    	 * Gets a new temporary variable id for a value returned by a function
    	 * 
    	 * @param functionName
    	 *            name of a function
    	 * @param args
    	 *            function arguments
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 * @returns a new variable identifier
    	 */
    	public int getVariableByFunctionCall(String functionName,
    			List<Integer> args) throws RecognitionException;

    	/**
    	 * Denotes that a block for function declaration starts
    	 * 
    	 * @param functionName
    	 *            name of a function
    	 * 
    	 * @param args
    	 *            function arguments
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void startFunctionDeclaration(String functionName,
    			List<String> args) throws RecognitionException;

    	/**
    	 * Denotes that current function declaration is over
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void endFunctionDeclaration() throws RecognitionException;


    	/**
    	 * Signalizes that result of a function was returned
    	 * 
    	 * @param id
    	 *            returned variable id
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
        public void returnStatement(int id) throws RecognitionException;

    	/**
    	 * Prints value by its id
    	 * 
    	 * @param id
    	 *            variable identifier
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void print(int id) throws RecognitionException;

    	/**
    	 * Assigns value got by its identifier to a variable by its name
    	 * 
    	 * @param strId
    	 *            variable name
    	 * @param id
    	 *            identifier where the value is stored
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 * @returns identifier of strId variable
    	 */
    	public void assign(String strId, int id) throws RecognitionException;

    	/**
    	 * Denotes the beginning of a new cycle
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void startCycle() throws RecognitionException;

    	/**
    	 * Denotes the end of a current cycle
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void stopCycle() throws RecognitionException;

    	/**
    	 * Denotes the break of a current cycle
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void breakCycle() throws RecognitionException;

    	/**
    	 * Denotes that current cycle should be continued from the beginning
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void continueCycle() throws RecognitionException;

    	/**
    	 * Denotes that a new 'if block' is started
    	 * 
    	 * @param condition
    	 *            identifier which references boolean value
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void startIf(int condition) throws RecognitionException;

    	/**
    	 * Denotes that a new 'else block' is started
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void startElse() throws RecognitionException;
    	
    	/**
    	 * Denotes that a new 'elif block' is started
    	 * IMPORTANT! This call should be done only after <code>startElse()</code> call
    	 * and after condition has already been calculated
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void startElif(int condition) throws RecognitionException;

    	/**
    	 * Denotes that current 'if block' is over
    	 * 
    	 * @throws RecognitionException
    	 *             if operation is not successful
    	 */
    	public void stopIf() throws RecognitionException;
    }
        
    private ParsingManager v;
        
    public void setManager(ParsingManager manager) {
      	this.v = manager;
    }

    private static String getStr(String str) {
    	return str.substring(1, str.length() - 1).replaceAll("\\\\(\\\\)", "$1");
    }

    public class Position {
    	public int line, pos;
    	
    	private Position(Token token) {
    		line = token.getLine();
    		pos = token.getCharPositionInLine();
    	}
    }

    private Position curPos;

    public Position getCurrentPosition() {
    	return curPos;
    }

    private void move(Token token) {
    	curPos = new Position(token);
    }
    	



    // $ANTLR start "parse"
    // C:\\ANTLR\\Python\\Python.g:261:1: parse : ( NL )* ( atom | decl )+ EOF ;
    public final void parse() throws RecognitionException {
        try {
            // C:\\ANTLR\\Python\\Python.g:261:7: ( ( NL )* ( atom | decl )+ EOF )
            // C:\\ANTLR\\Python\\Python.g:261:10: ( NL )* ( atom | decl )+ EOF
            {
            // C:\\ANTLR\\Python\\Python.g:261:10: ( NL )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==NL) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\ANTLR\\Python\\Python.g:261:10: NL
            	    {
            	    match(input,NL,FOLLOW_NL_in_parse50); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // C:\\ANTLR\\Python\\Python.g:261:14: ( atom | decl )+
            int cnt2=0;
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==BOOL||LA2_0==FLOAT||LA2_0==ID||LA2_0==INT||LA2_0==NOT||(LA2_0 >= STRING && LA2_0 <= SUM)||LA2_0==26||LA2_0==31||(LA2_0 >= 34 && LA2_0 <= 35)||(LA2_0 >= 39 && LA2_0 <= 40)||(LA2_0 >= 42 && LA2_0 <= 43)||(LA2_0 >= 45 && LA2_0 <= 46)) ) {
                    alt2=1;
                }
                else if ( (LA2_0==36) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\ANTLR\\Python\\Python.g:261:15: atom
            	    {
            	    pushFollow(FOLLOW_atom_in_parse54);
            	    atom();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // C:\\ANTLR\\Python\\Python.g:261:22: decl
            	    {
            	    pushFollow(FOLLOW_decl_in_parse58);
            	    decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            match(input,EOF,FOLLOW_EOF_in_parse62); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "parse"



    // $ANTLR start "atom"
    // C:\\ANTLR\\Python\\Python.g:264:1: atom : ( simple_atom | construction );
    public final void atom() throws RecognitionException {
        try {
            // C:\\ANTLR\\Python\\Python.g:264:6: ( simple_atom | construction )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==BOOL||LA3_0==FLOAT||LA3_0==ID||LA3_0==INT||LA3_0==NOT||(LA3_0 >= STRING && LA3_0 <= SUM)||LA3_0==26||LA3_0==31||(LA3_0 >= 34 && LA3_0 <= 35)||(LA3_0 >= 42 && LA3_0 <= 43)||LA3_0==45) ) {
                alt3=1;
            }
            else if ( ((LA3_0 >= 39 && LA3_0 <= 40)||LA3_0==46) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // C:\\ANTLR\\Python\\Python.g:264:8: simple_atom
                    {
                    pushFollow(FOLLOW_simple_atom_in_atom75);
                    simple_atom();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\ANTLR\\Python\\Python.g:264:22: construction
                    {
                    pushFollow(FOLLOW_construction_in_atom79);
                    construction();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "atom"



    // $ANTLR start "constr_atom"
    // C:\\ANTLR\\Python\\Python.g:267:1: constr_atom : ( simple_atom | NL block );
    public final void constr_atom() throws RecognitionException {
        try {
            // C:\\ANTLR\\Python\\Python.g:268:3: ( simple_atom | NL block )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==BOOL||LA4_0==FLOAT||LA4_0==ID||LA4_0==INT||LA4_0==NOT||(LA4_0 >= STRING && LA4_0 <= SUM)||LA4_0==26||LA4_0==31||(LA4_0 >= 34 && LA4_0 <= 35)||(LA4_0 >= 42 && LA4_0 <= 43)||LA4_0==45) ) {
                alt4=1;
            }
            else if ( (LA4_0==NL) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // C:\\ANTLR\\Python\\Python.g:268:5: simple_atom
                    {
                    pushFollow(FOLLOW_simple_atom_in_constr_atom94);
                    simple_atom();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\ANTLR\\Python\\Python.g:268:19: NL block
                    {
                    match(input,NL,FOLLOW_NL_in_constr_atom98); 

                    pushFollow(FOLLOW_block_in_constr_atom100);
                    block();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "constr_atom"



    // $ANTLR start "simple_atom"
    // C:\\ANTLR\\Python\\Python.g:271:1: simple_atom : simple ( NL | EOF ) ;
    public final void simple_atom() throws RecognitionException {
        try {
            // C:\\ANTLR\\Python\\Python.g:272:3: ( simple ( NL | EOF ) )
            // C:\\ANTLR\\Python\\Python.g:272:5: simple ( NL | EOF )
            {
            pushFollow(FOLLOW_simple_in_simple_atom116);
            simple();

            state._fsp--;


            if ( input.LA(1)==EOF||input.LA(1)==NL ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "simple_atom"



    // $ANTLR start "simple"
    // C:\\ANTLR\\Python\\Python.g:275:1: simple : ( 'pass' |e0= 'print' e= expr | ID '=' e= expr |e0= 'break' |e0= 'continue' |e0= 'return' e= expr | expr );
    public final void simple() throws RecognitionException {
        Token e0=null;
        Token ID1=null;
        int e =0;


        try {
            // C:\\ANTLR\\Python\\Python.g:275:8: ( 'pass' |e0= 'print' e= expr | ID '=' e= expr |e0= 'break' |e0= 'continue' |e0= 'return' e= expr | expr )
            int alt5=7;
            switch ( input.LA(1) ) {
            case 42:
                {
                alt5=1;
                }
                break;
            case 43:
                {
                alt5=2;
                }
                break;
            case ID:
                {
                int LA5_3 = input.LA(2);

                if ( (LA5_3==30) ) {
                    alt5=3;
                }
                else if ( (LA5_3==EOF||LA5_3==COMP||(LA5_3 >= LOGIC && LA5_3 <= MULT)||LA5_3==NL||LA5_3==SUM||LA5_3==26||LA5_3==32) ) {
                    alt5=7;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 3, input);

                    throw nvae;

                }
                }
                break;
            case 34:
                {
                alt5=4;
                }
                break;
            case 35:
                {
                alt5=5;
                }
                break;
            case 45:
                {
                alt5=6;
                }
                break;
            case BOOL:
            case FLOAT:
            case INT:
            case NOT:
            case STRING:
            case SUM:
            case 26:
            case 31:
                {
                alt5=7;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // C:\\ANTLR\\Python\\Python.g:275:10: 'pass'
                    {
                    match(input,42,FOLLOW_42_in_simple136); 

                    }
                    break;
                case 2 :
                    // C:\\ANTLR\\Python\\Python.g:276:5: e0= 'print' e= expr
                    {
                    e0=(Token)match(input,43,FOLLOW_43_in_simple144); 

                    pushFollow(FOLLOW_expr_in_simple148);
                    e=expr();

                    state._fsp--;


                    move(e0); if (v != null) v.print(e);

                    }
                    break;
                case 3 :
                    // C:\\ANTLR\\Python\\Python.g:277:5: ID '=' e= expr
                    {
                    ID1=(Token)match(input,ID,FOLLOW_ID_in_simple156); 

                    match(input,30,FOLLOW_30_in_simple158); 

                    pushFollow(FOLLOW_expr_in_simple162);
                    e=expr();

                    state._fsp--;


                    move(ID1); if (v != null) v.assign((ID1!=null?ID1.getText():null), e);

                    }
                    break;
                case 4 :
                    // C:\\ANTLR\\Python\\Python.g:278:5: e0= 'break'
                    {
                    e0=(Token)match(input,34,FOLLOW_34_in_simple172); 

                    move(e0); if (v != null) v.breakCycle();

                    }
                    break;
                case 5 :
                    // C:\\ANTLR\\Python\\Python.g:279:5: e0= 'continue'
                    {
                    e0=(Token)match(input,35,FOLLOW_35_in_simple182); 

                    move(e0); if (v != null) v.continueCycle();

                    }
                    break;
                case 6 :
                    // C:\\ANTLR\\Python\\Python.g:280:5: e0= 'return' e= expr
                    {
                    e0=(Token)match(input,45,FOLLOW_45_in_simple192); 

                    pushFollow(FOLLOW_expr_in_simple196);
                    e=expr();

                    state._fsp--;


                    move(e0); if (v != null) v.returnStatement(e);

                    }
                    break;
                case 7 :
                    // C:\\ANTLR\\Python\\Python.g:281:5: expr
                    {
                    pushFollow(FOLLOW_expr_in_simple204);
                    expr();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "simple"



    // $ANTLR start "block"
    // C:\\ANTLR\\Python\\Python.g:284:1: block : INDENT ( block | ( atom )+ ) ( DEDENT | EOF ) ;
    public final void block() throws RecognitionException {
        try {
            // C:\\ANTLR\\Python\\Python.g:284:7: ( INDENT ( block | ( atom )+ ) ( DEDENT | EOF ) )
            // C:\\ANTLR\\Python\\Python.g:284:9: INDENT ( block | ( atom )+ ) ( DEDENT | EOF )
            {
            match(input,INDENT,FOLLOW_INDENT_in_block215); 

            // C:\\ANTLR\\Python\\Python.g:284:16: ( block | ( atom )+ )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==INDENT) ) {
                alt7=1;
            }
            else if ( (LA7_0==BOOL||LA7_0==FLOAT||LA7_0==ID||LA7_0==INT||LA7_0==NOT||(LA7_0 >= STRING && LA7_0 <= SUM)||LA7_0==26||LA7_0==31||(LA7_0 >= 34 && LA7_0 <= 35)||(LA7_0 >= 39 && LA7_0 <= 40)||(LA7_0 >= 42 && LA7_0 <= 43)||(LA7_0 >= 45 && LA7_0 <= 46)) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // C:\\ANTLR\\Python\\Python.g:284:17: block
                    {
                    pushFollow(FOLLOW_block_in_block218);
                    block();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\ANTLR\\Python\\Python.g:284:25: ( atom )+
                    {
                    // C:\\ANTLR\\Python\\Python.g:284:25: ( atom )+
                    int cnt6=0;
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==BOOL||LA6_0==FLOAT||LA6_0==ID||LA6_0==INT||LA6_0==NOT||(LA6_0 >= STRING && LA6_0 <= SUM)||LA6_0==26||LA6_0==31||(LA6_0 >= 34 && LA6_0 <= 35)||(LA6_0 >= 39 && LA6_0 <= 40)||(LA6_0 >= 42 && LA6_0 <= 43)||(LA6_0 >= 45 && LA6_0 <= 46)) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // C:\\ANTLR\\Python\\Python.g:284:25: atom
                    	    {
                    	    pushFollow(FOLLOW_atom_in_block222);
                    	    atom();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt6 >= 1 ) break loop6;
                                EarlyExitException eee =
                                    new EarlyExitException(6, input);
                                throw eee;
                        }
                        cnt6++;
                    } while (true);


                    }
                    break;

            }


            if ( input.LA(1)==EOF||input.LA(1)==DEDENT ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "block"



    // $ANTLR start "construction"
    // C:\\ANTLR\\Python\\Python.g:287:1: construction : (e0= 'if' e= expr ':' constr_atom (e0= 'elif' e= expr ':' constr_atom )* (e0= 'else' ':' constr_atom )? |e0= 'while' e= expr ':' constr_atom |e0= 'for' ID 'in' 'range' '(' e1= expr ',' e2= expr ')' ':' constr_atom );
    public final void construction() throws RecognitionException {
        Token e0=null;
        Token ID2=null;
        int e =0;

        int e1 =0;

        int e2 =0;

